--- a/Lab 3 - Invaders/Lab 3 - Invaders.csproj
+++ b/Lab 3 - Invaders/Lab 3 - Invaders.csproj
@@ -84,6 +84,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Resources\main.png" />
+    <None Include="Resources\mute.png" />
+    <None Include="Resources\scoreboardMenu.png" />
+    <None Include="Resources\unmute.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\bug1.png" />
