Created a new class UserInterface.cs

--- a/Lab 3 - Invaders/Lab 3 - Invaders.csproj
+++ b/Lab 3 - Invaders/Lab 3 - Invaders.csproj
@@ -88,6 +88,7 @@
     <None Include="Resources\mute.png" />
     <None Include="Resources\scoreboardMenu.png" />
     <None Include="Resources\unmute.png" />
+    <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\bug1.png" />
