Added images needed when game over

--- a/Lab 3 - Invaders/Lab 3 - Invaders.csproj
+++ b/Lab 3 - Invaders/Lab 3 - Invaders.csproj
@@ -89,6 +89,8 @@
     <None Include="Resources\scoreboardMenu.png" />
     <None Include="Resources\unmute.png" />
     <Compile Include="UserInterface.cs" />
+    <None Include="Resources\gameOver_buttons.png" />
+    <None Include="Resources\gameOver_score.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\bug1.png" />
