Added code for displaying the boss in the game

--- a/Lab 3 - Invaders/Lab 3 - Invaders.csproj
+++ b/Lab 3 - Invaders/Lab 3 - Invaders.csproj
@@ -99,6 +99,7 @@
     <None Include="Resources\invaderkilled.wav" />
     <None Include="Resources\Mainmenu.wav" />
     <None Include="Resources\shoot.wav" />
+    <Compile Include="Alien.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\bug1.png" />
